Revert "feat(roomService::getPlayableRooms): renamed from `getAvailableRooms` (#38)"
This reverts commit 5feb4f0e0b3aba3f7355dbf460982e1ea8fef38a.